a bunch of small edits

--- a/apps/docs/components/content/1.index.md
+++ b/apps/docs/components/content/1.index.md
@@ -13,7 +13,7 @@ Install for Vue
 :::docs-button{to="/getting-started/react" class="dark:bg-[#61DBFB] !bg-[#61DBFB] !text-black"}
 Install for React
 :::
-:::docs-button{to="https://qwik-storefront-ui.pages.dev" class="dark:bg-[#AC7EF4] !bg-[#AC7EF4]"}
+:::docs-button{to="https://qwik-barnstormerui.pages.dev" class="dark:bg-[#AC7EF4] !bg-[#AC7EF4]"}
 Install for Qwik
 :::
 ::
